--- a/assets/app.css
+++ b/assets/app.css
@@ -8,3 +8,11 @@ html, body {
 	width: 100%;
 	height: calc(100% - 56px);
 }
+
+.legend {
+	padding: 6px 6px;
+	font: 14px/16px Arial, Helvetica, sans-serif;
+	background: rgba(255, 255, 255, 0.8);
+	box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+	border-radius: 5px;
+}
